--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,12 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-name: WakaTime status update
+name: TianaAkinwale
 
 on:
+  push:
+    branches: [main]
   schedule:
-    # Runs at 12 am  '0 0 * * *'  UTC
     - cron: "1 0 * * *"
 
 jobs:
@@ -57,6 +58,6 @@ jobs:
           # Automatic github token
           GITHUB_TOKEN: ${{ github.token }}
           # Branch - newer GitHub repositories have "main" as default branch, change to main in that case, default is master
-          BRANCH: "master"
+          BRANCH: "main"
           # Manual Commit messages - write your own messages here
           COMMIT_MSG: "Automated Coding Activity Update :alien:"
